# UIT_Legal_System

./: .gitignore  Dockerfile  README.md  docker-compose.yml  project_manifest.json  pyproject.toml
Preprocessing/: 01_preprocessing.ipynb  02_benchmark_embedding_models.ipynb  03_mine_hard_negatives.ipynb  04_train_dense_retriever_e5_copy.ipynb  05_evaluate_retriever_e5.ipynb  06_build_hybrid_index_e5.ipynb
ViRHE4QA/raw_excel/: train.xlsx  val.xlsx
app/: main.py
app/api/: routes.py
app/core/: config.py  logging.py
app/generation/: ollama.py  prompt.py
app/models/: schemas.py
app/retrieval/: artifacts.py  dense.py  encoder.py  hybrid.py  sparse.py  types.py
app/services/: container.py  rag.py
artifacts/hybrid_retriever_e5/: bm25_corpus.jsonl  manifest.json  passage_metadata.parquet  retriever_config.json  supabase_import.parquet  supabase_schema.sql  version.json
frontend/: app.js  index.html  style.css
scripts/: import_supabase.py
sql/: 001_init.sql
tests/: test_prompt.py  test_rrf.py
